# DevTerminal

./: .gitignore  .prettierignore  README.md  package-lock.json  package.json  rustfmt.toml  vite.config.js
.forgejo/workflows/: Example.yml  Test-Cross-Build.yaml
.github/workflows/: build.yaml
src/: App.svelte  appConfig.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  convertation.rs  lib.rs  main.rs  models.rs
src-tauri/src/protocols/: mod.rs  poe_canable.rs  poe_serial.rs  simple_serial.rs
src/appIcons/: ButtonArrow.svelte  ButtonClear.svelte  ButtonDelete.svelte  Collapse.svelte  CommandList.svelte  CreateCommand.svelte  HardRestart.svelte  HideCommand.svelte  OpenFile.svelte  PhEye.svelte  PhEyeSlash.svelte  SaveFile.svelte  SendCommand.svelte  ShowCommand.svelte  ShowGraph.svelte
src/components/: Common.ts  PortTab.svelte  options.ts
src/components/ElementsUI/: CommandListModal.svelte
src/components/UI/: Block.svelte  Modal.svelte  index.ts
src/protocols/: POECanable.ts  POESerial.ts  SimpleSerial.ts
src/stores/: Dictionary.ts  Interfaces.ts  StatusStore.ts
