[package]
name = "dev_terminal"
version = "1.2.0"
description = "DevTerminal"
authors = [""]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rs_plugin_test_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-serialplugin = "2.17.1"
serialport = "4.7.2"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tokio = "1.47.1"
lazy_static = "1.5.0"
serde_bytes = "0.11.17"
regex = "1.11.2"
base64 = "0.22.1"
hex = "0.4.3"
chrono = "0.4.42"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.19"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
